--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,9 @@ server.servlet.context-path=/api
 application.name=@project.artifactId@
 build.version=@project.version@
 
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/smarthata
+spring.datasource.username=smarthata
+spring.datasource.password=password
+
 #logging.level.root=DEBUG
