Add Device entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/api
 application.name=@project.artifactId@
 build.version=@project.version@
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/smarthata
 spring.datasource.username=smarthata
 spring.datasource.password=password
