--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     </dependencies>
 
     <build>
+        <finalName>smarthata</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
