--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.smarthata</groupId>
     <artifactId>smarthata-server</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -99,7 +99,7 @@
         <url>scm:git:git@github.com:smarthata/smarthata-java-server.git</url>
         <connection>scm:git:git@github.com:smarthata/smarthata-java-server.git</connection>
         <developerConnection>scm:git:git@github.com:smarthata/smarthata-java-server.git</developerConnection>
-        <tag>smarthata-server-1.0.6</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
