Add configurable list of devices

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,6 @@ bot:
   username: smarthatabot
   token: ${bot.token}
   adminChatId: ${bot.adminChatId}
+
+health:
+  devices: /bedroom, /bathroom, /heating, /hum
