Add property for enabling bot

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ mqtt:
 #logging.level.root: DEBUG
 
 bot:
+  enabled: true
   username: smarthatabot
   token: ${bot.token}
   adminChatId: ${bot.adminChatId}
