--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,5 +45,6 @@ oauth2.0:
   password: pass
 
 alice:
+  enabled: true
   url: https://dialogs.yandex.net/api/v1/skills/5a6e8aa0-e300-46dc-bcb7-76d9318855fc
   token: ${token}
